tests/files/type_checker_tests/should_fail/185.cmdr
//Should fail calling builtin with incorrect parameters
println "hello".substring(3, 3.4);
